# mydeck-hello-plugin

./: README.md  pyproject.toml
src/mydeck_hello/: __init__.py  cpu_pie.py
